docroot/profiles/drupal_commons/themes/commons_origins/css/commons_origins-style.css
/* ... */
.view-recent-notices span.updated-date,
.view-recent-featured span.updated-date,
.view-content-global-polls span.updated-date,
.view-content-global-blogs span.updated-date,
.view-content-global-documents span.updated-date,
.view-content-global-discussions span.updated-date,
.view-content-global-wikis span.updated-date {
	font-style: italic;
}

.view-content-global-documents .views-field-field-file-fid .filefield-file,
.view-content-global-documents .views-field-field-file-fid .filefield-file a {
	margin-right: 10px;
	white-space: nowrap;
}

/* recent notices view */

.view-id-recent_notices view-display-id-block_1 .view-header .addnew,
.view-display-id-calendar_block_1 .view-header .addnew {
	position: absolute;
	right: 10px;
	text-align: right;
	top: 22px;
	width: 90px;
}

.panel-pane .view-og-calendar .view-header .addnew a,
.panel-pane .view-recent-notices .view-header .addnew a,
.panel-pane .view-header .addnew a {
	background-color: transparent;
	border: none;
	color: #69c;
	font-size: 1em;
	padding: 0px;
	text-align: right;
	width: auto;
}

/*author images on all views*/
.view-content .views-row .views-field-picture{
	display: block;
	float: left;
	margin-right: 10px;
}

/*taxonomy pages list of nodes*/

.page-taxonomy .node h2 {
  margin-top: 0px;
  	margin-bottom: .6em;
}
.page-taxonomy .node .meta {
	width:14%;
	float: left;
	margin-right: 2%;
}

.page-taxonomy .node .content {
	width: 80%;
	float: left;
}

.page-taxonomy .node {
	margin-bottom: 20px;
	padding-bottom: 20px;
	border-bottom: 1px solid #eee; 
}

.page-taxonomy .node .content p:last-child{
	margin-bottom: 0px;
}

.page-taxonomy .node:after  {
clear: both;
content: ".";
display: block;
height: 0;
visibility: hidden;
}

/* User Directory */

.view-user-directory table.views-view-grid td {
	width: 23%;
}

.view-user-directory td {
	border-right: 1px solid #eee;
	border-bottom: 1px solid #eee;
	padding: 1%;
}

.view-user-directory td:last-child {
	border-right: none;
}

.view-user-directory tr:last-child td {
	border-bottom: none;
}

.view-user-directory .views-field-name {
	font-size: 1.2em;
	font-weight: bold;
	font-family: Tahoma, Verdana, sans-serif;
	margin: 0 0 4px 0;
}

.view-user-directory .views-field-value-4 {
	font-weight: bold;
}

/* RSS */
a.feed-icon img {
  margin: 5px;
}



/* Dashboard Views*/

.view-most-active-users td.views-field-name,
.view-home-newest-users td.views-field-name,
.view-og-most-active td.views-field-field-title,
.view-og-dashboard-groups td.views-field-title {
	width: 60%;
}

.view-most-active-users td.views-field-picture,
.view-home-newest-users td.views-field-picture,
.view-og-most-active td.views-field-field-group-image-fid,
.view-og-dashboard-groups td.views-field-field-group-image-fid {
	padding-left: 0px;
	width: 28px;
}

.block .view-most-active-users td.views-field-picture {
	width: auto;
}

.views-field-subscribe a, .views-field-leave-group a, .views-field-subscribe a, .views-field-leave-group a,
.views-field-subscribe a:link, .views-field-leave-group a:link, .views-field-subscribe a:link, .views-field-leave-group a:link {
    background: #6699CC;
    border: 1px solid #228BC8;
    color: #FFFFFF;
    display: block;
    float: right;
    font-family: Arial,Helvetica,sans-serif;
    font-size: 12px;
    font-weight: bold;
    line-height: 22px;
    margin: 2px;
    padding: 1px 5px 2px;
    text-transform: uppercase;
}

